...
  "eventActionEventButton": "Reserve",
  "eventActionCampaignValidated": "I voted!",
  "eventActionEventValidated": "I'm coming!",
  "moduleCentralassociation": "Centralassociation",
  "moduleCentralassociationDescription": "Aggregator of association links",
  "adminAccountTypes": "Account types",
  "adminAdd": "Add",
  "adminAddAssociation": "Add association",
  "adminAddedGroup": "Group created",
  "adminAddedLoaner": "Lender added",
  "adminAddedMember": "Member added",
  "adminAddedSchool": "School created",
  "adminAddedStructure": "Structure added",
  "adminAddGroup": "Add group",
  "adminAddingError": "Error while adding",
  "adminAddingMember": "Adding a member",
  "adminAddLoaningGroup": "Add loaning group",
  "adminAddMember": "Add member",
  "adminAddSchool": "Add school",
  "adminAddStructure": "Add structure",
...
  "adminDeleteAssociationMember": "Delete member?",
  "adminDeleteAssociationMemberConfirmation": "Are you sure you want to delete this member?",
  "adminDeleteAssociationMembership": "Delete membership?",
  "adminDeletedAssociationMembership": "Membership deleted",
  "adminDeletedGroup": "Group deleted",
  "adminDeletedSchool": "School deleted",
  "adminDeleteGroup": "Delete group?",
  "adminDeleteGroupConfirmation": "Are you sure you want to delete this group?",
  "adminDeleteSchool": "Delete school?",
  "adminDeleteUsers": "Delete users",
  "adminDeleting": "Deleting",
  "adminDeletingError": "Error while deleting",
  "adminDescription": "Description",
  "adminEdit": "Edit",
  "adminEditAssociation": "Edit association : {associationName}",
  "@adminEditAssociation": {
    "description": "Edit association",
    "placeholders": {
      "associationName": {
        "type": "String"
...
  "adminFailedToSendNotification": "Failed to send notification",
  "adminFailedToUpdateAssociationLogo": "Failed to update association logo",
  "adminFilters": "Filters",
  "adminGroup": "Group",
  "adminGroupNotification": "Group notifications",
  "adminGroups": "Groups",
  "adminGroupsManagement": "Groups management",
  "adminIban": "IBAN",
  "adminIbanError": "IBAN must be 27 characters",
  "adminImportList": "Import a list",
  "adminImportUsersDescription": "Import users from a CSV file. The CSV file must contain one email address per line.",
  "adminInvite": "Invite",
  "adminInvitedUsers": "Invited users",
...
      }
    }
  },
  "adminLoaningGroup": "Loaning group",
  "adminLooking": "Searching",
  "adminManageAssociations": "Manage associations",
  "adminManageMembers": "Manage members",
  "adminManagePaiementStructures": "Manage payment structures",
  "adminManager": "Structure administrator",
  "adminManagerGroup": "Manager group : {groupName}",
  "@adminManagerGroup": {
    "description": "Manager group",
    "placeholders": {
...
  "advertRemovedAnnouncer": "Announcer removed",
  "advertRemovingError": "Error during removal",
  "advertTags": "Tags",
  "advertTitle": "Title",
  "amapAccounts": "Accounts",
  "amapAdd": "Add",
  "amapAddDelivery": "Add delivery",
  "amapAddedCommand": "Order added",
  "amapAddedOrder": "Order added",
  "amapAddedProduct": "Product added",
  "amapAddedUser": "User added",
  "amapAddingACommand": "Add an order",
  "amapAddingCommand": "Add the order",
...
  "amapAmap": "Amap",
  "amapAmount": "Balance",
  "amapArchive": "Archive",
  "amapArchiveDelivery": "Archive",
  "amapArchivingDelivery": "Archiving delivery",
  "amapCategory": "Category",
  "amapCloseDelivery": "Lock",
  "amapCommandDate": "Order date",
  "amapCommandName": "Order name",
  "amapCommandProducts": "Order products",
  "amapConfirm": "Confirm",
  "amapContact": "Association contacts",
  "amapCreateCategory": "Create category",
  "amapDelete": "Delete",
  "amapDeletedDelivery": "Delivery deleted",
  "amapDeleteDelivery": "Delete delivery?",
  "amapDeleteDeliveryDescription": "Are you sure you want to delete this delivery?",
  "amapDeletedOrder": "Order deleted",
  "amapDeletedProduct": "Product deleted",
  "amapDeleteProduct": "Delete product?",
  "amapDeleteProductDescription": "Are you sure you want to delete this product?",
  "amapDeleting": "Deleting",
  "amapDeletingDelivery": "Delete delivery?",
...
  "amapDeliveryLocked": "Delivery locked",
  "amapDeliveryNotArchived": "Delivery not archived",
  "amapDeliveryNotDelivered": "Delivery not completed",
  "amapDeliveryNotLocked": "Delivery not locked",
  "amapDeliveryNotOpened": "Delivery not opened",
  "amapDeliveryOn": "Delivery on",
  "amapDeliveryOpened": "Delivery opened",
  "amapEditDelivery": "Edit delivery",
  "amapEditedCommand": "Order edited",
  "amapEditingError": "Error while editing",
  "amapEditProduct": "Edit product",
  "amapEndingDelivery": "End of delivery",
  "amapError": "Error",
  "amapErrorLink": "Error opening link",
  "amapErrorLoadingUser": "Error loading users",
...
  "amapLockingDelivery": "Lock delivery?",
  "amapLooking": "Search",
  "amapMidDay": "Midday",
  "amapMyOrders": "My orders",
  "amapName": "Name",
  "amapNextStep": "Next step",
  "amapNoCurrentOrder": "No current order",
  "amapNoMoney": "Not enough money",
  "amapNoOpennedDelivery": "No open delivery",
  "amapNoOrder": "No order",
  "amapNoProduct": "No product",
  "amapNoSelectedDelivery": "No delivery selected",
  "amapNotEnoughMoney": "Not enough money",
  "amapNotPlannedDelivery": "No scheduled delivery",
  "amapOneOrder": "order",
  "amapOpenDelivery": "Open",
  "amapOpened": "Opened",
  "amapOpenningDelivery": "Open delivery?",
  "amapOrder": "Order",
  "amapOrders": "Orders",
  "amapPickChooseCategory": "Please enter a value or choose an existing category",
  "amapPickDeliveryMoment": "Choose a delivery time",
  "amapPresentation": "Presentation",
  "amapPresentation1": "The AMAP (association for the preservation of small-scale farming) is a service offered by the Planet&Co association of ECL. You can receive products (fruit and vegetable baskets, juices, jams...) directly on campus!\n\nOrders must be placed before Friday at 9 PM and are delivered on campus on Tuesday from 1:00 PM to 1:45 PM (or from 6:15 PM to 6:30 PM if you can't come at 
...
