import 'package:flutter_riverpod/flutter_riverpod.dart';
import 'package:titan/advert/class/advert.dart';
import 'package:titan/auth/providers/openid_provider.dart';
import 'package:titan/tools/repository/repository.dart';

class AdvertRepository extends Repository {
  @override
  // ignore: overridden_fields
  final ext = 'advert/';

  Future<List<Advert>> getAllAdvert() async {
    return (await getList(
      suffix: 'adverts',
    )).map((e) => Advert.fromJson(e)).toList();
  }

  Future<List<Advert>> getAllAdminAdvert() async {
    return (await getList(
      suffix: 'adverts/admin',
    )).map((e) => Advert.fromJson(e)).toList();
  }

  Future<Advert> getAdvert(String id) async {
    return Advert.fromJson(await getOne(id));
  }

  Future<Advert> addAdvert(Advert advert) async {
    return Advert.fromJson(await create(advert.toJson(), suffix: 'adverts'));
  }

  Future<bool> updateAdvert(Advert advert) async {
    return await update(advert.toJson(), "adverts/${advert.id}");
  }

  Future<bool> deleteAdvert(String id) async {
    return await delete("adverts/$id");
  }
}

final advertRepositoryProvider = Provider((ref) {
  final token = ref.watch(tokenProvider);
  return AdvertRepository()..setToken(token);
});
